--- a/Code/HTML/Admin/admin_announcements.html
+++ b/Code/HTML/Admin/admin_announcements.html
@@ -36,7 +36,7 @@
         </div>
       </div>
 
-      <!-- Κρυμμένη φόρμα προσθήκης -->
+      <!-- Κρυμμένη φόρμα για προσθήκη -->
       <div id="add-form-container">
         <form id="add-announcement-form">
           <label for="item_name">Είδος:</label>
@@ -45,9 +45,8 @@
 
           <label for="quantity">Ποσότητα</label>
           <input type="number" id="content"/>
-          <!-- Νέα πεδία για επιπλέον είδη -->
           <div id="more-items-container">
-            <!-- Πεδία ειδών εισάγονται εδώ -->
+            <!-- Πεδία ειδών -->
           </div>
           <button type="button" id="add-item">
             Προσθήκη Περισσότερων Ειδών</button
