--- a/Code/HTML/Global/user_profile_settings.html
+++ b/Code/HTML/Global/user_profile_settings.html
@@ -37,7 +37,7 @@
         <input type="email" id="email" name="email" placeholder="Email" readonly>
         </div>
 
-         <!-- Περιοχή αλλαγής κωδικού -->
+         <!-- Αλλαγή κωδικού -->
          <div id="passwordChangeArea" style="display: none;">
             <div class="input-container">
             <label for="oldPassword">Παλιός Κωδικός</label>
