--- a/Code/HTML/Rescuer/cargo_page.html
+++ b/Code/HTML/Rescuer/cargo_page.html
@@ -97,7 +97,7 @@
             <i class="fas" id="dropElement">&#xf107;</i>
             <div class="custom-dropdown" style="display: none">
               <div id="categoryFilter"></div>
-              <!-- Εδώ θα πάνε τα υπόλοιπα checkboxes, γεννημένα μέσω JavaScript -->
+              <!-- Εδώ θα πάνε τα υπόλοιπα checkboxes -->
             </div>
           </div>
 
