--- a/Code/HTML/User/offers_page.html
+++ b/Code/HTML/User/offers_page.html
@@ -76,7 +76,7 @@
             </tr>
           </thead>
           <tbody id="Available-announcements-list">
-            <!-- Εδώ θα εμφανιστούν τα προϊόντα από τη βάση δεδομένων -->
+            <!-- Εδώ θα εμφανιστούν τα προϊόντα -->
           </tbody>
         </table>
         </div>
@@ -97,7 +97,7 @@
                 </tr>
               </thead>
               <tbody id="current_offers_list">
-                <!-- Εδώ θα εμφανιστούν τα προϊόντα από τη βάση δεδομένων -->
+                <!-- Εδώ θα εμφανιστούν τα προϊόντα -->
               </tbody>
             </table>
             </div>
@@ -117,7 +117,7 @@
                 </tr>
               </thead>
               <tbody id="old_offers_list">
-                <!-- Εδώ θα εμφανιστούν τα προϊόντα από τη βάση δεδομένων -->
+                <!-- Εδώ θα εμφανιστούν τα προϊόντα -->
               </tbody>
             </table>
             </div>
