--- a/Code/HTML/User/request_page.html
+++ b/Code/HTML/User/request_page.html
@@ -83,7 +83,7 @@
           <i class="fas" id="dropElement">&#xf107;</i>
           <div class="custom-dropdown" style="display: none">
             <div id="categoryFilter"></div>
-            <!-- Εδώ θα πάνε τα υπόλοιπα checkboxes, γεννημένα μέσω JavaScript -->
+            <!-- Εδώ θα πάνε τα υπόλοιπα checkboxes -->
           </div>
         </div>
 
@@ -97,7 +97,7 @@
             </tr>
           </thead>
           <tbody id="Available-items-list">
-            <!-- Εδώ θα εμφανιστούν τα προϊόντα από τη βάση δεδομένων -->
+            <!-- Εδώ θα εμφανιστούν τα προϊόντα -->
           </tbody>
         </table>
 
@@ -115,7 +115,7 @@
                 </tr>
               </thead>
               <tbody id="current_requests_list">
-                <!-- Εδώ θα εμφανιστούν τα προϊόντα από τη βάση δεδομένων -->
+                <!-- Εδώ θα εμφανιστούν τα προϊόντα -->
               </tbody>
             </table>
           </div>
@@ -133,7 +133,7 @@
                 </tr>
               </thead>
               <tbody id="old_requests_list">
-                <!-- Εδώ θα εμφανιστούν τα προϊόντα από τη βάση δεδομένων -->
+                <!-- Εδώ θα εμφανιστούν τα προϊόντα -->
               </tbody>
             </table>
           </div>
